--- a/testInp.html
+++ b/testInp.html
@@ -67,31 +67,35 @@
 
         keyc = e.keyCode;
 
-        for(let li of ul.children){
+        if(ul != ''){
+            for(let li of ul.children){
             li.removeAttribute('class');
-        }
-
-        if(keyc === 13){
-            inputT.value = setIntValue;
-            ul.parentNode.removeChild(ul);
-        }
-
-        if(keyc === 40){
-            liIndex += 1;
-            if(liIndex > ul.children.length-1){
-                liIndex = 0;
             }
-            console.log(ul.children[liIndex]);
-            ul.children[liIndex].setAttribute('class','selected');
-            setIntValue = ul.children[liIndex].innerText;
-        } else if(keyc === 38){
-            liIndex -= 1;
-            if(liIndex < 0){
+        }
+
+        if(inputT.value != ""){
+            if(keyc === 13){
+                inputT.value = setIntValue;
+                ul.parentNode.removeChild(ul);
+            }
+
+            if(keyc === 40){
+                liIndex += 1;
+                if(liIndex > ul.children.length-1){
+                    liIndex = 0;
+                }
+                console.log(ul.children[liIndex]);
+                ul.children[liIndex].setAttribute('class','selected');
+                setIntValue = ul.children[liIndex].innerText;
+            }else if(keyc === 38){
+                liIndex -= 1;
+                if(liIndex < 0){
                 liIndex = ul.children.length-1;
+                }
+                console.log(ul.children[liIndex]);
+                ul.children[liIndex].setAttribute('class','selected');
+                setIntValue = ul.children[liIndex].innerText;
             }
-            console.log(ul.children[liIndex]);
-            ul.children[liIndex].setAttribute('class','selected');
-            setIntValue = ul.children[liIndex].innerText;
         }
 
     });
@@ -102,6 +106,11 @@
             ul = document.createElement('ul');
             ul.setAttribute('id','ul');
             div.appendChild(ul);
+            //事件委托，为ul下面的子节点提供委托事件，e.target指向被点击的节点
+            ul.addEventListener('click',function(e){
+                var tar = e.target;
+                inputT.value = tar.innerText;
+        })
         }
 
         var re = new RegExp("^" + inputT.value + "");
@@ -120,11 +129,6 @@
 
             }
         }
-        //事件委托，为ul下面的子节点提供委托事件，e.target指向被点击的节点
-        ul.addEventListener('click',function(e){
-            var tar = e.target;
-            inputT.value = tar.innerText;
-        })
     })
 </script>
 </body>
