--- a/testInp.html
+++ b/testInp.html
@@ -40,7 +40,6 @@ book
 <input id="input1" class="book" type="text">
 <input id="input2" class="book" type="text">
 <script>
-//    var input = document.getElementById("input1");
     var sData = ["java", "javascript", "js", "php", "python", "c++"];
 
     var createInp = new AutoComplete('#input1', sData);
@@ -65,9 +64,13 @@ book
         this.inputT = document.querySelector(input);
         this.sData = Data;
 
+        var liIndex = -1,
+            setIntValue = '',
+            ul = '';
+
         this.init = function () {
             this.inputT.addEventListener('input', onInputChange);
-            this.inputT.addEventListener('keydown', onKeyDownChange(e));
+            this.inputT.addEventListener('keydown', onKeyDownChange);
         }
 
         function onInputChange(){
@@ -106,92 +109,47 @@ book
         }
 
         function onKeyDownChange(e) {
-
+            if(_this.inputT.value){
+                switch (e.keyCode){
+                    case 13:
+                        enterKeyDown();
+                        break;
+                    case 38:
+                        upKeyDown();
+                        break;
+                    case 40:
+                        downKeyDown();
+                        break;
+                }
+            }
         }
-
-        this.addInput = function () {
-            var keyc = 0;
-            var liIndex = -1;
-            var setIntValue = '';
-
-//        var inputT = document.getElementById("inp");
-            var ul = '';
-            this.inputT.addEventListener('keydown', function (e) {
-
-                keyc = e.keyCode;
-
-                if (ul) {
-                    for (let li of ul.children) {
-                        li.removeAttribute('class');
-                    }
-                }
-                console.log(_this.inputT);
-                if (_this.inputT.value) {
-                    if (keyc === 13) {
-                        _this.inputT.value = setIntValue;
-                        ul.parentNode.removeChild(ul);
-                        ul = null
-                    }
-
-                    if (keyc === 40) {
-                        liIndex += 1;
-                        if (liIndex > ul.children.length - 1) {
-                            liIndex = 0;
-                        }
-                        console.log(ul.children[liIndex]);
-                        ul.children[liIndex].setAttribute('class', 'selected');
-                        setIntValue = ul.children[liIndex].innerText;
-                    } else if (keyc === 38) {
-                        liIndex -= 1;
-                        if (liIndex < 0) {
-                            liIndex = ul.children.length - 1;
-                        }
-                        console.log(ul.children[liIndex]);
-                        ul.children[liIndex].setAttribute('class', 'selected');
-                        setIntValue = ul.children[liIndex].innerText;
-                    }
-                }
-
-            });
-
-            this.inputT.addEventListener('input', function () {
-                //判断如果没有ul，就执行添加
-                if (!ul) {
-                    ul = document.createElement('ul');
-                    ul.style.left = _this.inputT.offsetLeft + 'px';
-                    ul.style.top = _this.inputT.offsetTop + _this.inputT.offsetHeight + 'px';
-                    ul.style.width = _this.inputT.clientWidth + 'px';
-                    document.body.appendChild(ul);
-
-                    console.log(_this.inputT.style);//此时尚未加载样式表里的样式，所以style里面没数据
-                    //事件委托，为ul下面的子节点提供委托事件，e.target指向被点击的节点
-                    ul.addEventListener('click', function (e) {
-                        var tar = e.target;
-                        _this.inputT.value = tar.innerText;
-                    })
-                }
-
-                var re = new RegExp("^" + _this.inputT.value + "");
-                liIndex = -1;  //每次input更新，就重置指针
-
-                //清空ul
-                while (ul.firstChild) {
-                    ul.removeChild(ul.firstChild);
-                }
-
-                for (let i = 0; i < _this.sData.length; i++) {
-                    if (_this.inputT.value != '' && re.test(_this.sData[i])) {
-                        let li = document.createElement("li");
-                        li.innerText = _this.sData[i];//4.
-                        ul.appendChild(li);
-
-                    }
-                }
-            })
-
+        function enterKeyDown() {
+            _this.inputT.value = setIntValue;
+            ul.parentNode.removeChild(ul);
+            ul = null
         }
-
-        this.addInput();
+        function upKeyDown() {
+            ul.children[liIndex].removeAttribute('class');
+            liIndex -= 1;
+            if (liIndex < 0) {
+                liIndex = ul.children.length - 1;
+            }
+            console.log(ul.children[liIndex]);
+            ul.children[liIndex].setAttribute('class', 'selected');
+            setIntValue = ul.children[liIndex].innerText;
+        }
+        function downKeyDown() {
+            if(liIndex != -1)
+                ul.children[liIndex].removeAttribute('class');
+            liIndex += 1;
+            if (liIndex > ul.children.length - 1) {
+                liIndex = 0;
+            }
+            console.log(ul.children[liIndex]);
+            ul.children[liIndex].setAttribute('class', 'selected');
+            setIntValue = ul.children[liIndex].innerText;
+        }
+        this.init();
     }
 </script>
 </body>
