--- a/lcCascade-select.html
+++ b/lcCascade-select.html
@@ -30,15 +30,16 @@
 <script>
 	var llocation = llocation;
 	var defaultLocation = ['广东省','广州市','天河区'];
-	new LcCascader('div.cascader',llocation,defaultLocation);
+	var button = document.getElementById('commit');
+	var selectDiv = document.querySelector('div.selectedL');
+
+	var lcc = new LcCascader('div.cascader',llocation,defaultLocation);
 
 	function LcCascader(div,data,defaultLocation) {
         var _this = this;
         this.data = data;
         //要注意把nodelist换成节点
         this.div = document.querySelectorAll(div)[0];
-        this.selectDiv = document.querySelector('div.selectedL');
-        this.button = document.getElementById('commit');
 
         this.selectList = this.div.getElementsByTagName('select');
 
@@ -65,6 +66,9 @@
         	this.div.appendChild(selectP);
 
         	selectP.addEventListener('change',function(){
+        		if(selectIndex == 0){
+        			_this.lastLocation = [];
+        		};
         		//去掉默认参数再调用
         		_this.lastLocation.splice(selectIndex,1,data[selectP.selectedIndex - 1].name);
         		_this.selectLocation(selectIndex + 1,data[selectP.selectedIndex - 1].children);
@@ -82,18 +86,23 @@
         	}
         }
 
-        this.button.onclick = function(){
-            if(confirm("确认选择：" + _this.lastLocation.join('') + "?")){
-                var i = document.createElement('i');
-                var time = new Date();
-
-                i.innerText = time.toLocaleTimeString() + '---' + _this.lastLocation.join('');
-                _this.selectDiv.appendChild(i);
-            }
+        this.getLastLocation = function(){
+        	return this.lastLocation;
         }
 
         this.init();
 
+    }
+
+    button.onclick = function(){
+    	var lastLocation = lcc.getLastLocation();
+    	if(confirm("确认选择：" + lastLocation.join('') + "?")){
+    		var i = document.createElement('i');
+    		var time = new Date();
+
+    		i.innerText = time.toLocaleTimeString() + '---' + lastLocation.join('');
+    		selectDiv.appendChild(i);
+    	}
     }
 </script>
 </body>
